2007-02-20  Nate Nielsen  <nielsen@memberwebs.com>

    * agent/seahorse-agent-actions.c: Fix crash when using GPG2
    Patch from Sebastian Dröge. Fixes bug #410193

2007-02-18  Adam Schreiber  <sadam@clemson.edu>

    * src/seahorse-delete.c:
    * src/seahorse-add-uid.c:
    * src/seahorse-ssh-key-properties.c:
    * src/seahorse-add-subkey.c:
    * src/seahorse-gkeyring-item-properties.c:
    * src/seahorse-ssh-upload.c:
    * src/seahorse-expires.c:
    * src/seahorse-key-properties.c:
    * src/seahorse-revoke.c:
    * src/seahorse-keyserver-sync.c:
    * plugins/nautilus/Makefile.am:
    * plugins/nautilus/seahorse-pgp-preferences.c:
    * plugins/gedit/seahorse-gedit.c:
    * plugins/gedit/Makefile.am:
    * libseahorse/seahorse-server-source.c:
    * libseahorse/seahorse-pgp-key.c:
    * libseahorse/seahorse-prefs.c:
    * libseahorse/seahorse-hkp-source.c:
    * libseahorse/seahorse-pgp-source.c:
    * libseahorse/seahorse-signer.c:
    * libseahorse/seahorse-widget.c:
    * libseahorse/seahorse-validity.c: Fix various localization problems. 
    Patches from Nickolay V. Shmyrev.  Fixes bug #408774


2007-02-15  Adam Schreiber  <sadam@clemson.edu>

    * src/seahorse-ssh-upload.glade: Add translatable property to label.
    Fixes bug #408335

2007-02-13  Nate Nielsen  <nielsen@memberwebs.com>

   * libseahorse/seahorse-gpg-options.c: Fix crash when changing gpg.conf
   options. Patch by Saleem Abdulrasool. Fixes bug #406337

2007-02-13  Nate Nielsen  <nielsen@memberwebs.com>

   * libseahorse/seahorse-passphrase.c: Add missing parentheses.
   Patch by Saleem Abdulrasool

2007-02-12  Nate Nielsen  <nielsen@memberwebs.com>

   * configure.in: Bump version number

=== seahorse-0.9.91 ===

2007-02-12  Nate Nielsen  <nielsen@memberwebs.com>

    * configure.in:
    * NEWS:
    * README: Version 0.9.91

2007-02-09  Adam Schreiber  <sadam@clemson.edu>
    
    * src/seahorse-gkeyring-source.c:
    * src/seahorse-keyserver-sync.glade: