@@ -1,3 +1,12 @@
+2007-02-20  Adam Schreiber  <sadam@clemson.edu>
+
+    * src/seahorse-delete.c:
+    * src/seahorse-keyserver-results.c:
+    * src/seahorse-key-manager.c:
+    * plugins/nautilus/seahorse-tool.c: Fix ngettext usage.  Patch from 
+    Nickolay V. Shmyrev.  Fixes bug #408786
+
+
 2007-02-20  Nate Nielsen  <nielsen@memberwebs.com>
 
     * agent/seahorse-agent-actions.c: Fix crash when using GPG2
